surely this will fix the buttons on iphone

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -115,6 +115,8 @@ html {
     margin: 5px;
     height: 100%;
     width: 100%;
+    min-height: 150px;
+    min-width:150px;
     display: flex;
     justify-content: center;
     align-items: center;
